# posix-tools-for-windows

./: .gitignore  README.md
.claude/: settings.local.json
awk/: Cargo.toml  README.md  list.txt
awk/src/: ast.rs  builtins.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  regex_compat.rs  value.rs
cat/: Cargo.toml  README.md
cat/src/: main.rs
cat/tests/: posix.rs
comm/: Cargo.toml  README.md
comm/src/: main.rs
cp/: Cargo.toml  README.md
cp/src/: main.rs
cp/tests/: cli.rs
cp/tmp/: Cargo.toml
cut/: Cargo.toml  README.md
cut/src/: main.rs
df/: Cargo.toml  README.md
df/src/: main.rs
diff/: Cargo.toml  README.md
diff/src/: main.rs
du/: Cargo.toml  README.md
du/src/: main.rs
fd/: Cargo.toml  LICENSE-MIT  README.md  fd_test.ps1
fd/src/: main.rs
find/: 03_exec_test.ps1  04_batch_extra_test.ps1  04_batch_extra_test.sh  Cargo.toml  README.md  debug_test_a.sh
find/src/: action.rs  expression.rs  main.rs  messages.rs  parser.rs  platform.rs  walker.rs
fold/: Cargo.toml  README.md
fold/src/: main.rs
grep/: Cargo.toml  README.md
grep/src/: main.rs
groff/: Cargo.toml  README.md  test.1  test2.1
groff/src/: main.rs
head/: Cargo.toml  README.md
head/src/: main.rs
head/test_dir/: file1.txt  file2.txt
join/: Cargo.toml  README.md
join/src/: main.rs
kill/: Cargo.toml  README.md  test_glob.ps1
kill/src/: main.rs
less/: Cargo.toml  README.md  sample-sj.txt  sample-utf.txt  test-en.txt  test-euc.txt  test-jis.txt  test-sjis.txt  test.txt
less/src/: main.rs
ls/: Cargo.toml  README.md  test.txt
ls/src/: main.rs
mv/: Cargo.toml  README.md
mv/src/: main.rs
mv/tests/: cli.rs
paste/: Cargo.toml  README.md
paste/src/: main.rs
patch/: Cargo.toml  README.md
patch/src/: main.rs
ps/: Cargo.toml  README.md
ps/src/: main.rs
pwd/: Cargo.toml  README.md
pwd/src/: main.rs
rm/: Cargo.toml  README.md
rm/src/: main.rs
rm/tests/: cli.rs
sed/: Cargo.toml  README.md  test-utf.txt  test_sed.bat
sed/src/: main.rs
sed/tests/: cli.rs
sort/: Cargo.toml  README.md
sort/src/: main.rs
split/: Cargo.toml  README.md
split/src/: main.rs
tail/: Cargo.toml  README.md  main.rs  tail-highlight.toml  tail.txt
tee/: Cargo.toml  README.md
tee/src/: main.rs
top/: Cargo.toml  README.md
top/src/: main.rs
touch/: Cargo.toml  README.md
touch/src/: main.rs
tr/: Cargo.toml  README.md
tr/src/: main.rs
tree/: Cargo.toml  README.md
tree/src/: main.rs
uniq/: Cargo.toml  README.md
uniq/src/: main.rs
wc/: Cargo.toml  README.md
wc/src/: main.rs
which/: Cargo.toml  README.md
which/src/: main.rs
xargs/: Cargo.toml  README.md  xargs_test.ps1
xargs/src/: main.rs
