[package]
name = "df"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fukuyori/posix-tools-for-windows.git"

[dependencies]
glob = "0.3"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
]}

[dev-dependencies]
tempfile = "3.6"
