[package]
name = "du"
version = "1.0.0"
edition = "2021"
description = "POSIX準拠のdu (ディスク使用量) コマンド - Windows版"
authors = ["Your Name"]
license = "MIT"
repository = "https://github.com/fukuyori/posix-tools-for-windows.git"

[dependencies]
glob = "0.3.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }

[profile.release]
opt-level = 3
lto = true
strip = true
