[package]
name = "find"
version = "1.0.0"
edition = "2021"
authors = ["find developers"]
description = "POSIX準拠のfindコマンド（Rust実装）"
license = "MIT"
repository = "https://github.com/fukuyori/posix-tools-for-windows.git"

[dependencies]
glob = "0.3"
regex = "1"
chrono = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = 3
lto = true
