[package]
name = "fold"
version = "1.0.0"
edition = "2021"
authors = ["Your Name"]
description = "Unix fold互換の行折り返しツール (Windows版)"
license = "MIT"
repository = "https://github.com/fukuyori/posix-tools-for-windows.git"

[dependencies]
encoding_rs = "0.8"
glob = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true
