[package]
name = "grep"
version = "1.0.0"
edition = "2021"
description = "POSIX準拠のgrepコマンド（Windows用）"
authors = ["Claude"]
license = "MIT"
repository = "https://github.com/fukuyori/posix-tools-for-windows.git"

[dependencies]
regex = "1"
encoding_rs = "0.8"
atty = "0.2"
glob = "0.3.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
