[package]
name = "groff"
version = "1.0.0"
edition = "2021"
authors = ["fukuyori"]
description = "軽量groff/nroff実装（manページ表示用）"
license = "MIT"
repository = "https://github.com/fukuyori/posix-tools-for-windows.git"
keywords = ["cli", "groff", "nroff", "man", "troff"]
categories = ["command-line-utilities"]

[dependencies]
glob = "0.3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
