[package]
name = "less"
version = "1.0.0"
edition = "2021"
description = "GNU less互換のページャー（Windows用）"
authors = ["Claude"]
license = "MIT"
repository = "https://github.com/fukuyori/posix-tools-for-windows.git"

[dependencies]
crossterm = "0.27"
encoding_rs = "0.8"
glob = "0.3.3"
unicode-width = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
