[package]
name = "ls"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fukuyori/posix-tools-for-windows.git"

[dependencies]
chrono = "0.4"
glob = "0.3.3"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
]}
