[package]
name = "ps"
version = "1.0.0"
edition = "2021"
description = "POSIX準拠のpsコマンド（Windows用）"
authors = ["Claude"]
license = "MIT"
repository = "https://github.com/fukuyori/posix-tools-for-windows.git"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Security",
]

[dependencies]
glob = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
