[package]
name = "tail"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fukuyori/posix-tools-for-windows.git"

[[bin]]
name = "tail"
path = "main.rs"

[dependencies]
encoding_rs = "0.8"
glob = "0.3"
regex = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "5"
