[package]
name = "top"
version = "1.0.0"
edition = "2021"
authors = ["Your Name"]
description = "Unix top互換のプロセス監視ツール (Windows版)"
license = "MIT"
repository = "https://github.com/fukuyori/posix-tools-for-windows.git"

[dependencies]
crossterm = "0.27"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = 3
lto = true
strip = true
