[package]
name = "touch"
version = "1.0.0"
edition = "2021"
authors = ["Your Name"]
description = "Unix touch互換のタイムスタンプ変更ツール (Windows版)"
license = "MIT"
repository = "https://github.com/fukuyori/posix-tools-for-windows.git"

[dependencies]
chrono = "0.4"
glob = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }

[profile.release]
opt-level = 3
lto = true
strip = true
