[package]
name = "tr"
version = "0.1.0"
edition = "2021"
authors = ["fukuyori"]
description = "POSIX準拠のtrコマンド（GNU拡張対応）"
license = "MIT"
repository = "https://github.com/fukuyori/posix-tools-for-windows.git"
keywords = ["cli", "tr", "unix", "posix"]
categories = ["command-line-utilities"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
