[package]
name = "tree"
version = "0.1.0"
edition = "2021"
authors = ["fukuyori"]
description = "ディレクトリツリー表示コマンド"
license = "MIT"
repository = "https://github.com/fukuyori/posix-tools-for-windows.git"
keywords = ["cli", "tree", "directory", "filesystem"]
categories = ["command-line-utilities"]

[dependencies]
glob = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
