[package]
name = "which"
version = "1.0.0"
edition = "2021"
authors = ["Your Name"]
description = "Unix which互換のコマンドパス検索ツール (Windows版)"
license = "MIT"
repository = "https://github.com/fukuyori/posix-tools-for-windows.git"

[dependencies]
glob = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }

[profile.release]
opt-level = 3
lto = true
strip = true
